fix(wiki): fixed wiki links

--- a/ansible/roles/forc_api/files/html/50x.html
+++ b/ansible/roles/forc_api/files/html/50x.html
@@ -18,7 +18,7 @@
         <ul>
             <li>
                 Please have a look on the
-                <a href="https://cloud.denbi.de/portal/webapp/#/virtualmachines/vmOverview">
+                <a href="https://simplevm.denbi.de/portal/webapp/#/virtualmachines/overview">
                     instance overview
                 </a>
                 if your virtual machine is active and if the research environment is set up correctly.<br>
@@ -34,7 +34,7 @@
             </li>
             <li>
                 Please have a look on our
-                <a href="https://cloud.denbi.de/wiki/simple_vm/customization/#research-environments">Wiki</a>
+                <a href="https://simplevm.denbi.de/wiki/simple_vm/customization/#research-environments">Wiki</a>
                 to find more information about research environments in general.
             </li>
         </ul>
