--- a/ansible/roles/forc_api/files/html/index.html
+++ b/ansible/roles/forc_api/files/html/index.html
@@ -18,12 +18,12 @@
         <ul>
             <li>
                 Please have a look on our
-                <a href="https://cloud.denbi.de/wiki/simple_vm/customization/#research-environments">Wiki</a>
+                <a href="https://simplevm.denbi.de/wiki/simple_vm/customization/#research-environments">Wiki</a>
                 to find more information about research environments in general.
             </li>
             <li>
                 On the
-                <a href="https://cloud.denbi.de/portal/webapp/#/virtualmachines/vmOverview">
+                <a href="https://simplevm.denbi.de/portal/webapp/#/virtualmachines/overview">
                     instance overview
                 </a>
                 you may find the appropriate URL for your research environment.
